--- a/airline/airline-client/package.json
+++ b/airline/airline-client/package.json
@@ -18,10 +18,14 @@
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
     "@angular/material": "^8.1.3",
+    "@angular/material-moment-adapter": "^8.1.4",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "angular4-hal": "^7.8.14",
+    "material-design-icons": "^3.0.1",
+    "moment": "^2.24.0",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
